--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-ANYTHING STOP!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>MIGOS</title>
+    <link>
+    <script></script>
+  </head>
+  <body>
+    <div id="background">
+    <h1>MIGOS</h1>
+    <p>Migos is a group of rappers that came out in 2009. The group consists of 3 people who all bring there unique style to the group. The leader of the group, Quavo, is the most popular out of the group. He brings the melody and rhythm to the Migos. Offset, Quavo's cousin, brings the style and lyrical side to the Migos. Lastly, there's Takeoff, Quavo's nephew, who brings the fast-paced rapping to the Migos. But the one thing they all do so good that really made their music pop out out to labels like 300, was their strong talent at ad libs. </p>
+      <a href="https://en.wikipedia.org/wiki/Culture_(Migos_album)"><h3>Click for more info on their newest album</h3></a>
+      <button id="mybutton">click</button>
+      <img id="pic"src="https://i.ytimg.com/vi/1VUa99-tJqs/maxresdefault.jpg">
+    </div>
+
+  </body>
+</html>
