--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>MIGOS</title>
-    <link>
-    <script></script>
+    <link src="Stlyesheet.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="application.js"></script>
   </head>
   <body>
     <div id="background">
