--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a href="https://en.wikipedia.org/wiki/Culture_(Migos_album)"><h3>Click for more info on their newest album</h3></a>
       <button id="mybutton">click</button>
       <img id="pic"src="https://i.ytimg.com/vi/1VUa99-tJqs/maxresdefault.jpg">
+      <p>To view my "Guess My Number" game click<a href="https://brandom2716.github.io/GuessMyNumber/index.html">HERE</a></p>
     </div>
 
   </body>
