--- a/GuessMyNumber/index.html
+++ b/GuessMyNumber/index.html
@@ -19,5 +19,6 @@
 			<button id="clear">Clear</button>
 			<div id='response'></div> 
 		</div>
+		To go back to my main page click	q<a href="http://brandom2716.github.io"> </a>
 	</body>
 </html>
