--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button id="mybutton">click</button>
       <img id="pic"src="https://i.ytimg.com/vi/1VUa99-tJqs/maxresdefault.jpg">
       <p>To view my "Guess My Number" game click<a href="https://brandom2716.github.io/GuessMyNumber/index.html">HERE</a></p>
+      <p>To view my "Memory" game click<a href="https://brandom2716.github.io/Memory/index.html"
     </div>
 
   </body>
